Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8319764

C2 compilation asserts during incremental inlining because Phi input is out of bounds

    • b21
    • 22
    • b25
    • generic
    • generic

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/ent-user/ci-scripts/jdk_build/jdk_src/src/hotspot/share/opto/node.hpp:399), pid=125943, tid=126766
      # assert(i < _max) failed: oob: i=3, _max=3
      #
      # JRE version: OpenJDK Runtime Environment (22.0) (fastdebug build 22-internal-git-82a4d115e)
      # Java VM: OpenJDK 64-Bit Server VM (fastdebug 22-internal-git-82a4d115e, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x1638c76] ReplacedNodes::apply(Compile*, Node*)+0x1aa6
      #
      # Core dump will be written. Default location: /tmp/core.125943
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      Current CompileTask:
      C2:48019 2079 jdk.incubator.vector.AbstractVector::convertShapeTemplate (270 bytes)

      Stack: [0x00007f75f3e00000,0x00007f75f3f00000], sp=0x00007f75f3efad10, free space=1003k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1638c76] ReplacedNodes::apply(Compile*, Node*)+0x1aa6 (node.hpp:399)
      V [libjvm.so+0xde74c7] GraphKit::replace_call(CallNode*, Node*, bool)+0x7d7 (graphKit.cpp:2017)
      V [libjvm.so+0x880db6] CallGenerator::do_late_inline_helper()+0xad6 (callGenerator.cpp:721)
      V [libjvm.so+0xa2bc80] Compile::inline_incrementally_one()+0xf0 (compile.cpp:2037)
      V [libjvm.so+0xa2cad9] Compile::inline_incrementally(PhaseIterGVN&)+0x239 (compile.cpp:2120)
      V [libjvm.so+0xa2ea68] Compile::Optimize()+0x428 (compile.cpp:2255)
      V [libjvm.so+0xa32f81] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1b01 (compile.cpp:856)
      V [libjvm.so+0x8789ea] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x20a (c2compiler.cpp:134)
      V [libjvm.so+0xa3fa27] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc57 (compileBroker.cpp:2292)
      V [libjvm.so+0xa40828] CompileBroker::compiler_thread_loop()+0x4f8 (compileBroker.cpp:1951)
      V [libjvm.so+0xf12833] JavaThread::thread_main_inner()+0x223 (javaThread.cpp:720)
      V [libjvm.so+0x19289fe] Thread::call_run()+0xbe (thread.cpp:220)
      V [libjvm.so+0x151596a] thread_native_entry(Thread*)+0x12a (os_linux.cpp:786)

        1. hs_err_pid125943.log
          162 kB
        2. hs_err_pid3477536.log
          125 kB
        3. replay_pid3477536.log
          513 kB
        4. replay_pid66636.log
          273 kB

            roland Roland Westrelin
            eliu Eric Liu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: