8319764: C2 compilation asserts during incremental inlining because Phi input is out of bounds

Reviewed-by: thartmann, chagedorn